Updated layout issues causing search text field to be hidden.

--- a/WeatherForecast/wwwroot/css/site.css
+++ b/WeatherForecast/wwwroot/css/site.css
@@ -1,4 +1,4 @@
-/*body {
+﻿/*body {
     padding-top: 50px;
     padding-bottom: 20px;
 }
@@ -28,9 +28,10 @@
 }*/
 
 
-html, body {
+/*html, body {
     min-height: 100%;
-}
+}*/
+
 
 html {
     height: 100%;
